<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".getstd_1">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:fontFamily="@font/seguisb"
        android:lineSpacingExtra="43dp"
        android:textFontWeight="90"
        android:text="@string/welcome_to_arclet"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpUsage" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:layout_marginTop="32sp"
        android:src="@drawable/earc_3d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="157dp"
        android:layout_height="43dp"
        android:layout_marginStart="31.5dp"
        android:fontFamily="@font/seguibl"
        android:layout_marginTop="28sp"
        android:text="@string/arclet"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="172sp"
        android:layout_height="43sp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/seguisb"
        android:text="@string/get_started"
        android:textColor="#6B7580"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="388sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45.7dp"
        android:fontFamily="@font/seguisb"
        android:lineSpacingExtra="18sp"
        android:text="@string/connecting_you_to_ethereum_and_more_decentralized_chains_and_the_decentralized_web_we_re_happy_to_see_you"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/btn1"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginTop="28.3dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="ContentDescription,MissingConstraints,PxUsage,RtlHardcoded" />

  </androidx.constraintlayout.widget.ConstraintLayout>