<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page_2">
    <TextView

        android:id="@+id/textView5"
        android:layout_width="144dp"
        android:layout_height="46dp"
        android:layout_marginTop="30sp"
        android:fontFamily="@font/seguisb"
        android:letterSpacing="0.1"
        android:text="@string/arclet"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:layout_marginTop="32sp"
        android:src="@drawable/main_logo_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26sp"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/seguisb"
        android:text="@string/get_started"
        android:textColor="#6B7580"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="338dp"
        android:layout_height="189dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/segoeui"
        android:letterSpacing="0.025"
        android:lineSpacingExtra="0.025in"
        android:text="@string/arclet_would_like_to_gather_usage_data_to_better_understand_how_our_users_interact_with_the_extension_this_data_will_be_used_to_continually_improve_the_usability_and_user_experience_of_our_product_and_the_ethereum_ecosystem"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="InOrMmUsage,MissingConstraints" />


    <ImageView
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="26dp"
        android:src="@drawable/prev"
        android:id="@+id/prev1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="ContentDescription,MissingConstraints,PxUsage,RtlHardcoded" />

    <ImageView
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/next"
        android:id="@+id/next2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="ContentDescription,MissingConstraints,PxUsage,RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>