<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page_4_1">

    <ImageView
        android:id="@+id/connect"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/main_logo_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />
    <TextView
        android:id="@+id/con"
        android:layout_width="157dp"
        android:layout_height="43dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/seguibl"
        android:letterSpacing="0.025"
        android:text="@string/arc_network"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/earc_3d"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/arcadd"
        android:layout_width="270dp"
        android:layout_height="31dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:background="@drawable/acc_1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/arcbal"
        android:layout_width="246dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/seguisb"
        android:gravity="center"
        android:text=""
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arcadd"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/to"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@drawable/add"
        android:clickable="true"
        android:layout_marginTop="50dp"
        android:elevation="8sp"
        android:focusable="true"
        android:fontFamily="@font/seguisb"
        android:gravity="center"
        android:hint="@string/enter_recipient_address"
        android:padding="4dp"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arcbal"
        tools:ignore="Autofill,MissingConstraints,TextFields" />


    <EditText
        android:id="@+id/amount"
        android:layout_width="271dp"
        android:layout_height="40dp"
        android:background="@drawable/add"
        android:clickable="true"
        android:elevation="8sp"
        android:focusable="true"
        android:fontFamily="@font/seguisb"
        android:gravity="center"
        android:hint="@string/transfer_amount"
        android:padding="4dp"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to"
        tools:ignore="Autofill,MissingConstraints,TextFields" />

    <Button
        android:id="@+id/send_ether"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/add"
        android:clickable="true"
        android:elevation="8sp"
        android:fontFamily="@font/seguisb"
        android:focusable="true"
        android:padding="4dp"
        android:layout_marginTop="30sp"
        android:hint="@string/send"
        android:textSize="16sp"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
